# libbinlogger

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Rakefile  conanfile.py  fips.yml  wercker.yml
cmake/: BuildG3Log.cmake  BuildGTestLibraries.cmake  BuildGoogleSnappy.cmake  BuildLibActiveObject.cmake
fips-configs/: lsdslam-osx-xcode-debug.yml
include/logger/: LogFields.h  LogReader.h
lib/: CMakeLists.txt  LogReader.cpp  LogWriter.cpp
test/unit/: CMakeLists.txt  test_test.cpp
